--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,11 +12,11 @@ monologue96:
 
   # This photo will be used in the about section
   picture:
-    src:             /assets/img/me.jpg
+    src:             https://monologue96.github.io/assets/img/me.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            /assets/img/me.jpg
-      2x:            /assets/img/me.jpg
+      1x:            https://monologue96.github.io/assets/img/me.jpg
+      2x:            https://monologue96.github.io/assets/img/me.jpg
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
